--- a/TODO
+++ b/TODO
@@ -1,32 +1,32 @@
 Phrases
     Meets Expectations:
-        ☐ An array of strings has been created for the phrases
-        ☐ 5 phrases are in the array
-        ☐ Phrases in array include only letters and spaces
+        ☐ An array of strings has been created for the phrases @started(22-03-26 00:43)
+        ☐ 5 phrases are in the array @started(22-03-26 00:43)
+        ☐ Phrases in array include only letters and spaces @started(22-03-26 00:43)
     
 Phrase Display
     Meets Expectations:
-        ☐ A random, unknown phrase is chosen when the page loads
-        ☐ Each letter and space is appended to the phrase display
-        ☐ Only letters in the phrase have the class “letter”
+        ☐ A random, unknown phrase is chosen when the page loads @started(22-03-26 00:43)
+        ☐ Each letter and space is appended to the phrase display @started(22-03-26 00:43)
+        ☐ Only letters in the phrase have the class “letter” @started(22-03-26 00:43)
 
     Exceeds Expectations:
-        ☐ Transitions have been added to the phrase display
+        ☐ Transitions have been added to the phrase display @started(22-03-26 00:43)
         
 Keyboard
     Meets Expectations:
-        ☐ Clicking a letter present in the phrase adds the “show” class to those letters in the display
-        ☐ Clicking a letter not present in the phrase increases the count of the missed variable by 1 and changes a liveHeart.png image to a lostHeart.png image.
-        ☐ No letter can be clicked twice
-        ☐ Clicking space between letters does nothing
+        ☐ Clicking a letter present in the phrase adds the “show” class to those letters in the display @started(22-03-26 00:43)
+        ☐ Clicking a letter not present in the phrase increases the count of the missed variable by 1 and changes a liveHeart.png image to a lostHeart.png image. @started(22-03-26 00:43)
+        ☐ No letter can be clicked twice @started(22-03-26 00:43)
+        ☐ Clicking space between letters does nothing @started(22-03-26 00:43)
 
 Game Over
     Meets Expectations:
-        ☐ If a player makes 5 wrong guesses, the “lose” overlay is shown
-        ☐ If all the letters in the phrase are shown, the “win” overlay is shown
+        ☐ If a player makes 5 wrong guesses, the “lose” overlay is shown @started(22-03-26 00:43)
+        ☐ If all the letters in the phrase are shown, the “win” overlay is shown @started(22-03-26 00:43)
 
     Exceeds Expectations:
-        ☐ A button has been added to the “lose” and “win” overlays to reset the game
+        ☐ A button has been added to the “lose” and “win” overlays to reset the game @started(22-03-26 00:43)
  
 
 
