--- a/TODO
+++ b/TODO
@@ -6,17 +6,17 @@ Phrases
     
 Phrase Display
     Meets Expectations:
-        ✔ A random, unknown phrase is chosen when the page loads @started(22-03-26 00:43) @done(22-04-03 01:56) @lasted(1w1d13m5s)
-        ✔ Each letter and space is appended to the phrase display @started(22-03-26 00:43) @done(22-04-03 01:56) @lasted(1w1d13m8s)
-        ✔ Only letters in the phrase have the class “letter” @started(22-03-26 00:43) @done(22-04-03 01:56) @lasted(1w1d13m10s)
+        ☐ A random, unknown phrase is chosen when the page loads @started(22-03-26 00:43)
+        ☐ Each letter and space is appended to the phrase display @started(22-03-26 00:43)
+        ☐ Only letters in the phrase have the class “letter” @started(22-03-26 00:43)
 
     Exceeds Expectations:
         ☐ Transitions have been added to the phrase display @started(22-03-26 00:43)
         
 Keyboard
     Meets Expectations:
-        ✔ Clicking a letter present in the phrase adds the “show” class to those letters in the display @started(22-03-26 00:43) @done(22-04-03 01:56) @lasted(1w1d13m23s)
-        ✔ Clicking a letter not present in the phrase increases the count of the missed variable by 1 and changes a liveHeart.png image to a lostHeart.png image. @started(22-03-26 00:43) @done(22-04-03 02:13) @lasted(1w1d30m12s)
+        ☐ Clicking a letter present in the phrase adds the “show” class to those letters in the display @started(22-03-26 00:43)
+        ☐ Clicking a letter not present in the phrase increases the count of the missed variable by 1 and changes a liveHeart.png image to a lostHeart.png image. @started(22-03-26 00:43)
         ☐ No letter can be clicked twice @started(22-03-26 00:43)
         ☐ Clicking space between letters does nothing @started(22-03-26 00:43)
 
